##Text encoding: utf-8

2010-08-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/bracketstool.cc: fully implement OnDrag().

2010-08-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: prohibit a reaction operator partial slection
	when the whole reaction is not selected.
	* libs/gcp/reaction-step.cc: fix reaction step loading.
	* libs/gcp/reaction-step.h: ditto.
	* libs/gcp/widgetdata.cc: prohibit a reaction operator partial slection
	when the whole reaction is not selected.
	* libs/gcu/document.cc: fix reaction step loading
	* plugins/paint/arrows/retrosynthesis.cc: ensure that links are correctly
	set when pasting data.
	* plugins/paint/arrows/retrosynthesisarrow.cc: ditto.
	* plugins/paint/arrows/retrosynthesisarrow.h: ditto.
	* plugins/paint/arrows/retrosynthesisstep.cc: ditto.
	* plugins/paint/atoms/orbital.cc: ditto.
	* plugins/paint/selection/group.cc: ditto.
	* plugins/paint/selection/lassotool.cc: ditto.

2010-08-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: fixed more issues related to pasting a partial
	selection.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcp/widgetdata.cc: ditto.
	* libs/gcp/widgetdata.h: ditto.
	* plugins/paint/selection/lassotool.cc: ditto.

2010-07-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: do not create empty molecules when pasting.
	* libs/gcp/widgetdata.cc: do not select objects that can't exist standalone
	as toplevel objects.

2010-07-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/widgetdata.cc: really simplify selection.
	* plugins/paint/selection/lassotool.cc: ditto.

2010-07-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: implement SVG snapshot.
	* libs/gcp/arrow.cc: ensure that links are correctly set when pasting data.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcp/electron.cc: ditto.
	* libs/gcp/fragment.cc: ditto.